@@ -32,14 +32,13 @@ import org.jooby.View;
 import org.jooby.test.MockUnit;
 import org.junit.Test;
 
-import com.google.common.collect.ImmutableList;
 
 public class AbstractRendererContextTest {
 
   @Test(expected = Err.class)
   public void norenderer() throws Throwable {
     List<Renderer> renderers = new ArrayList<>();
-    List<MediaType> produces = ImmutableList.of(MediaType.json);
+    List<MediaType> produces = List.of(MediaType.json);
     View value = Results.html("view");
     new MockUnit()
         .run(unit -> {
